gas_tank/gas-tank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f gas_tank.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gas-tank
  name: gas-tank
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gas-tank
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f gas_tank.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/gas-tank-default: "true"
        io.kompose.service: gas-tank
    spec:
      containers:
        - command:
            - ./run-gas-tank.sh
          image: neonlabsorg/proxy:${REVISION}
          name: gas-tank
          resources: {}
      hostname: gas_tank
      restartPolicy: Always
status: {}
